 ^ Updating Copyright in xml files.
 ^ Updating Copyright in administrator folder
 ^ Updating Copyright
 ^ Updating <version>1.7.0</version> to 2.5.0
 ^ Updating version="1.7" to 2.5
 # Normalizing index.html files
 ^ Updating en-GB.xml files
 ^ Deleting $Id$. Thanks Rouven.
 # Correcting some EOL
 $ Updating installation ini files nb-NO, nn-NO, ro-RO

-------------------- 2.5.0 Beta2 Release [11-Jan-2012] ------------------

11-Jan-2012 Mark Dexter
 # [#24634] Menu items don't become active (i.e. highlight) if the Menu Item Type is "Menu Item Alias"

11-Jan-2012 Christophe Demko
 ^ Merge branch 'platform114' of git://github.com/realityking/joomla-cms

11-Jan-2012 Jean-Marie Simonet
 $ Updating installation ini file be-BY
 # [#27694] *Finder search broken because of filters Country and Region.
 $ Updating installation ini files bs-BA, gu-IN
 # [#27683] *Smartsearch remaining issues after commit #27565. Thanks Chris.
 $ Updating installation ini files af-ZA, lv-LV 

10-Jan-2012 Jean-Marie Simonet
 $ Updating installation ini files az-AZ, bg-BG, ckb-IQ, da-DK, de-DE, es-ES, et-EE, fi-FI, hu-HU, it-IT, ja-JP, km-KH, mk-MK, nl-NL, sr-SR, sr-YU, sv-SE, ta-IN
 # [#27565] Move Smart Search content type-specific language strings into their respective plug-ins. Thanks Chris.
 # [#25086] "Image" button in tinyMCE is missing when creating new content. Thanks Elin.
 $ Updating installation ini files he-IL, mn-MN, uk-UA

10-Jan-2012 Mark Dexter
 # [#27634] PHP Strict error for SQLServer (merge with 11.4 platform)
 # [#27678] PHP 5.4 (E_STRICT): installation fails due to strict warnings
 # [#27604] class suffix missing from mod_banner ITEMS
 # [#27479] Finder schema to support SQLServer
 # [#27607] Sample Data for SQLServer and SQLAzure
 # [#27635] JForm issue with Fabrik - proposed solution (thanks Rouven & Christophe)
 # [#27630] Issue with replacePrefix -- valid only for SQLServer 
 + [#27507] Add ablility to turn off the email to user when an Admin creates a user