@@ -40,6 +40,7 @@ $ -> Language fix or change
  ^ Deleting $Id$. Thanks Rouven.
  # Correcting some EOL
  $ Updating installation ini files nb-NO, nn-NO, ro-RO
+ # Adding misssing index.html files. Thanks Rouven.
 
 -------------------- 2.5.0 Beta2 Release [11-Jan-2012] ------------------
 
